@@ -5557,30 +5557,27 @@ for-value   NIL or T
 (defun c-EVAL-WHEN (&optional (c #'c-form))
   (test-list *form* 2)
   (test-list (second *form*) 0)
-  (let ((load-flag nil) (top-level-p (eq c #'compile-toplevel-form))
-        (compile-flag nil))
+  (let ((load-p nil) (compile-p nil) (eval-p nil) (execute-p nil)
+        (top-level-p (eq c #'compile-toplevel-form)))
     (dolist (situation (second *form*))
-      (case situation
-        ((LOAD) (setq load-flag t))
-        ((:LOAD-TOPLEVEL) (when top-level-p (setq load-flag t)))
-        ((COMPILE) (setq compile-flag t))
-        ((:COMPILE-TOPLEVEL) (when top-level-p (setq compile-flag t)))
-        ((EVAL :EXECUTE))       ; see control.d
-        (T (cond ((or (equal situation '(NOT EVAL))
-                      (equal situation '(NOT :EXECUTE)))
-                  (setq load-flag t compile-flag t))
-                 ((or (equal situation '(NOT COMPILE))
-                      (equal situation '(NOT :COMPILE-TOPLEVEL)))
-                  (setq load-flag t))
-                 (t
-                  (c-error
-                   (TEXT "~s situation must be ~s, ~s or ~s, but not ~s")
-                   'eval-when :load-toplevel :compile-toplevel :execute
-                   situation))))))
+      (fcase equal situation
+        ((LOAD) (setq load-p t))
+        ((:LOAD-TOPLEVEL) (when top-level-p (setq load-p t)))
+        ((COMPILE) (setq compile-p t))
+        ((:COMPILE-TOPLEVEL) (when top-level-p (setq compile-p t)))
+        ((EVAL) (setq eval-p t))
+        ((:EXECUTE) (setq execute-p t))
+        (((NOT EVAL) (NOT :EXECUTE)) (setq load-p t compile-p t))
+        (((NOT COMPILE)) (setq load-p t eval-p t))
+        (((NOT :COMPILE-TOPLEVEL)) (setq load-p t execute-p t))
+        (t (c-error (TEXT "~s situation must be ~s, ~s or ~s, but not ~s")
+                    'eval-when :load-toplevel :compile-toplevel :execute
+                    situation))))
     (let ((form `(PROGN ,@(cddr *form*))))
-      (when (and compile-flag load-flag) (c-write-lib form))
-      (when compile-flag (eval form))
-      (funcall c (if load-flag form nil)))))
+      (when (and compile-p load-p) (c-write-lib form))
+      (when compile-p (eval form))
+      (funcall c (if (or load-p (and execute-p (not top-level-p)))
+                     form nil)))))
 
 ;; compile (COND {clause}*)
 (defun c-COND ()
