@@ -1,5 +1,10 @@
 2003-04-04  Sam Steingold  <sds@gnu.org>
 
+	* compiler.lisp (c-EVAL-WHEN): use FCASE; correctly handle
+	:EXECUTE/non-top-level; :EXECUTE is now _NOT_ the same as EVAL
+
+2003-04-04  Sam Steingold  <sds@gnu.org>
+
 	* macros1.lisp (fcase): DEFMACRO, not DEFMACRO-SPECIAL
 	so that it will also work in interpreted code
 
